--- a/TestAutoit/TestAutoit.csproj
+++ b/TestAutoit/TestAutoit.csproj
@@ -57,6 +57,7 @@
     <Reference Include="UIAutomationTypes" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Coder.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
